--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ walkdir = "^2"
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 serde_yaml = "^0.8"
-serde-transcode = "^1.1"
+jsonpath_lib = "^0.2"
 
 [dependencies.handlebars]
 version = "3.0.0-beta.4"
