--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 serde_yaml = "^0.8"
 jsonpath_lib = "^0.2"
+pulldown-cmark = "0.6.1"
 
 [dependencies.handlebars]
 version = "=3.0.0-beta.4"
