--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "^1.0"
 serde_yaml = "^0.8"
 jsonpath_lib = "^0.2"
 pulldown-cmark = "0.6.1"
+fs_extra = "1.1"
 
 [dependencies.handlebars]
 version = "=3.0.0-beta.4"
