--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,7 @@ jsonpath_lib = "^0.2"
 pulldown-cmark = "0.6.1"
 fs_extra = "1.1"
 url = "2"
-pathdiff = "0.1"
-relative-path = "1.0"
+chrono="0.4"
 
 [dependencies.handlebars]
 version = "=3.0.0-beta.4"
