--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ pulldown-cmark = "0.6.1"
 fs_extra = "1.1"
 url = "2"
 chrono="0.4"
+relative-path = "1"
 
 [dependencies.handlebars]
 version = "=3.0.0-beta.4"
