--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ serde_json = "^1.0"
 serde_yaml = "^0.8"
 jsonpath_lib = "^0.2"
 pulldown-cmark = "0.6.1"
-fs_extra = "1.1"
 url = "2"
 chrono="0.4"
 relative-path = "1"
+globset = "0.4"
 
 [dependencies.handlebars]
 version = "=3.0.0-beta.4"
