--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ url = "2"
 chrono="0.4"
 relative-path = "1"
 globset = "0.4"
+regex = "1"
+lazy_static = "1"
 
 [dependencies.handlebars]
 version = "=3.0.0-beta.4"
