Fix login, again

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -43,7 +43,7 @@ jobs:
         run: docker build . --file .github/workflows/Dockerfile --tag docker.pkg.github.com/${{ github.repository }}/hagen:latest
 
       - name: Login to container repository
-        run: docker login -u ctron -p {{ secrets.GITHUB_TOKEN }} docker.pkg.github.com
+        run: docker login -u ctron -p ${{ secrets.GITHUB_TOKEN }} docker.pkg.github.com
 
       - name: Push the container image
         run: docker push docker.pkg.github.com/${{ github.repository }}/hagen:latest
