--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -46,7 +46,7 @@ jobs:
             --tag quay.io/ctron/hagen:latest
 
       - name: Login to quay.io
-        run: docker login -u "${{ secret.QUAY_IO_USERNAME }}" -p "${{ secret.QUAY_IO_PASSWORD }}" quay.io
+        run: docker login -u "${{ secrets.QUAY_IO_USERNAME }}" -p "${{ secrets.QUAY_IO_PASSWORD }}" quay.io
 
       - name: Push to quay.io
         run: docker push quay.io/ctron/hagen:latest
