--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ relative-path = "1"
 globset = "0.4"
 regex = "1"
 lazy_static = "1"
+clap = { git = "https://github.com/clap-rs/clap.git" }
 
 [dependencies.handlebars]
 version = "=3.0.0-beta.4"
