--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ globset = "0.4"
 regex = "1"
 lazy_static = "1"
 clap = { git = "https://github.com/clap-rs/clap.git" }
+quick-xml = "0.17"
+strum = "0.17"
+strum_macros = "0.17"
 
 [dependencies.handlebars]
 version = "=3.0.0-beta.4"
