--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -11,5 +11,29 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build
       run: cargo build --verbose
+
+    - name: Store artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: binary
+        path: target/debug/hagen
+
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
     - name: Run tests
       run: cargo test --verbose
+
+  site:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/download-artifact@v1
+        with:
+          name: binary
+          path: hagen
+
+      - run: cd website && ../hagen
