--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -39,3 +39,6 @@ jobs:
 
     - name: Switch to gh-pages
       run: git checkout gh-pages
+
+    - name: Switch back
+      run: git checkout ${GITHUB_SHA}
