more paths to fix

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -47,6 +47,13 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
+      - name: Download binary
+        uses: actions/upload-artifact@v1
+        with:
+          name: binary
+
+      - run: mv binary hagen
+
       - name: Build the container image
         run: |
           docker build . --file .github/workflows/Dockerfile \
@@ -93,7 +100,6 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: binary
-          path: hagen
 
       - run: find
 
