--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -102,8 +102,7 @@ jobs:
           name: binary
 
       - run: mv binary hagen
-
-      - run: find
+      - run: chmod a+x hagen
 
       - name: Build content
         run: |
