try fix exec issue 5

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -101,11 +101,8 @@ jobs:
         with:
           name: binary
 
-      - run: find /home/runner/work/hagen/hagen/binary
-      - run: file /home/runner/work/hagen/hagen/binary
-      - run: ldd /home/runner/work/hagen/hagen/binary
-      - run: chmod a+x binary
-      - run: sudo mv binary /usr/local/bin/hagen
+      - run: sudo mv binary/hagen /usr/local/bin/hagen
+      - run: chmod a+x /usr/local/bin/hagen
 
       - run: env
       - run: which hagen
