try trigger build

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -126,3 +126,10 @@ jobs:
           else
             echo "No changes have been detected since last build, nothing to publish"
           fi
+
+      - name: Request Github Pages build job
+        run: |
+          curl -L -X POST
+          -H "Content-Type: application/json"
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}"
+          "https://api.github.com/repos/${{ github.repository }}/pages/builds"
