try trigger build 2

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -129,7 +129,7 @@ jobs:
 
       - name: Request Github Pages build job
         run: |
-          curl -L -X POST
-          -H "Content-Type: application/json"
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}"
+          curl -L -X POST \
+          -H "Content-Type: application/json" \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           "https://api.github.com/repos/${{ github.repository }}/pages/builds"
