--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,13 @@ relative-path = "1"
 globset = "0.4"
 regex = "1"
 lazy_static = "1"
-clap = { git = "https://github.com/clap-rs/clap.git" }
+#clap = { git = "https://github.com/clap-rs/clap.git" }
+structopt = "0.3"
+clap = "2.33"
 quick-xml = "0.17"
 strum = "0.17"
 strum_macros = "0.17"
 
 [dependencies.handlebars]
 version = "3.0.1"
-#git = "https://github.com/ctron/handlebars-rust.git"
-#branch = "feature/fix_issue_312_1"
 features = ["dir_source"]
