--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "hagen"
 version = "0.1.0"
 authors = ["Jens Reimann <ctron@dentrassi.de>"]
 edition = "2018"
+license = "EPL-2.0"
+description = "A static homepage generator"
 
 [dependencies]
 failure = "^0.1"
