--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+    tags:
+      - 'v*.*.*'
 
 jobs:
 
@@ -59,6 +61,16 @@ jobs:
           docker build . --file .github/workflows/Dockerfile \
             --tag docker.pkg.github.com/${{ github.repository }}/hagen:latest \
             --tag quay.io/ctron/hagen:latest
+
+      - name: Check for release
+        if: startsWith(github.ref,'ref/tags/v')
+        run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
+
+      - name: Tag image with release tag
+        if: env.RELEASE_VERSION
+        run: |
+          docker tag quay.io/ctron/hagen:latest quay.io/ctron/hagen:${RELEASE_VERSION}
+          docker tag quay.io/ctron/hagen:latest docker.pkg.github.com/${{ github.repository }}/hagen:${RELEASE_VERSION}
 
       - name: Login to quay.io
         run: docker login -u "${{ secrets.QUAY_IO_USERNAME }}" -p "${{ secrets.QUAY_IO_PASSWORD }}" quay.io
