--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -75,16 +75,23 @@ jobs:
       - name: Login to quay.io
         run: docker login -u "${{ secrets.QUAY_IO_USERNAME }}" -p "${{ secrets.QUAY_IO_PASSWORD }}" quay.io
 
-      - name: Push to quay.io
+      - name: Push latest to quay.io
         run: docker push quay.io/ctron/hagen:latest
+
+      - name: Push release to quay.io
+        if: env.RELEASE_VERSION
+        run: docker push quay.io/ctron/hagen:${RELEASE_VERSION}
 
       # Unfortunately the GitHub docker registry requires a sign-in, even for public repositories
       - name: Login to github container repository
         run: docker login -u ctron -p ${{ secrets.GITHUB_TOKEN }} docker.pkg.github.com
 
-      - name: Push to github container repository
+      - name: Push latest to github container repository
         run: docker push docker.pkg.github.com/${{ github.repository }}/hagen:latest
 
+      - name: Push release to github container repository
+        if: env.RELEASE_VERSION
+        run: docker push docker.pkg.github.com/${{ github.repository }}/hagen:${RELEASE_VERSION}
 
   website:
 
