--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -63,8 +63,8 @@ jobs:
             --tag quay.io/ctron/hagen:latest
 
       - name: Check for release
-        if: startsWith(github.ref,'ref/tags/v')
-        run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
+        if: startsWith(github.ref,'refs/tags/v')
+        run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:11})
 
       - name: Tag image with release tag
         if: env.RELEASE_VERSION
