--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,12 @@ authors = ["Jens Reimann <ctron@dentrassi.de>"]
 edition = "2018"
 license = "EPL-2.0"
 description = "A static homepage generator"
+homepage = "https://ctron.github.io/hagen"
+repository = "https://github.com/ctron/hagen"
+keywords = ["static", "homepage", "generator", "handlebars", "hugo", "jekyll"]
+categories = ["web-programming", "template-engine", "command-line-utilities"]
+
+[badges]
 
 [dependencies]
 failure = "^0.1"
