--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "EPL-2.0"
 description = "A static homepage generator"
 homepage = "https://ctron.github.io/hagen"
 repository = "https://github.com/ctron/hagen"
-keywords = ["static", "homepage", "generator", "handlebars", "hugo", "jekyll"]
+keywords = ["homepage", "generator", "handlebars", "hugo", "jekyll"]
 categories = ["web-programming", "template-engine", "command-line-utilities"]
 
 [badges]
