--- a/website/package.json
+++ b/website/package.json
@@ -32,8 +32,8 @@
   ],
   "dependencies": {
     "bootstrap": "4.4.1",
-    "popper.js": "^1.16.1",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1"
   },
   "scripts": {
     "css:compile": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 scss/custom.scss build/assets/bootstrap/bootstrap.css",
