--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,9 @@
+name: Publish release
+
 on:
   push:
     tags:
       - 'v*'
-
-name: Publish release
 
 jobs:
 
@@ -16,11 +16,11 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         include:
           - os: ubuntu-latest
-            suffix: "-linux-amd64"
+            suffix: "linux-amd64"
           - os: macos-latest
-            suffix: "-macos-amd64"
+            suffix: "macos-amd64"
           - os: windows-latest
-            suffix: "-windows-amd64"
+            suffix: "windows-amd64"
             exe: ".exe"
 
     steps:
@@ -43,10 +43,10 @@ jobs:
           key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build
-        run: cargo build --verbose
+        run: cargo build --verbose --release
 
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test --verbose --release
 
       - name: Store artifact
         uses: actions/upload-artifact@v1
@@ -92,7 +92,6 @@ jobs:
           path: windows-amd64
 
       - name: Upload Release Assets (linux-amd64)
-        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -103,7 +102,6 @@ jobs:
           asset_content_type: application/octet-stream
 
       - name: Upload Release Assets (macos-amd64)
-        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -114,7 +112,6 @@ jobs:
           asset_content_type: application/octet-stream
 
       - name: Upload Release Assets (windows-amd64)
-        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
