Create a builder for the generator

--- a/hagen/Cargo.toml
+++ b/hagen/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hagen"
-version = "0.1.4"
+version = "0.1.5"
 authors = ["Jens Reimann <ctron@dentrassi.de>"]
 edition = "2018"
 license = "EPL-2.0"
@@ -15,8 +15,10 @@ readme = "../README.md"
 
 [dependencies]
 
-hagen-core = { path = "../hagen-core", version = "0.1.4" }
+hagen-core = { path = "../hagen-core", version = "0.1.5" }
 
 env_logger = "^0.7"
 failure = "^0.1"
+
 structopt = "0.3"
+clap = "2.33"
