--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -117,6 +117,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
 
+    # build the website only for master
+    if: !env.RELEASE_VERSION
+
     steps:
 
       - name: Checkout source
