--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -118,7 +118,7 @@ jobs:
     needs: build
 
     # build the website only for master
-    if: "!env.RELEASE_VERSION"
+    if: github.ref == 'refs/heads/master'
 
     steps:
 
